# ox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compiler.cc  compiler.hh  example-backup.ox  example.ox  main.cc  ox.cc  ox.hh  parser.yy  scanner.ll  type.hh
examples/: BinarySearch.ox
include/: ast.hh  compiler.hh  declaration.hh  expression.hh  generator.hh  node.hh  statement.hh  syntax.hh  type.hh  variant.hh  visitor.hh
include/compiler/: compiler.h
include/ox/: AbstractSyntax.h  SymbolTable.h  Visitor.h  compiler.h  symbol.h  syntax.h
include/symbol/: symbol.h
include/syntax/: syntax.h
src/: ast.cc  backup.yy  compiler.cc  compiler.cpp  compiler.hh  generator.cc  generator.cpp  generator.hh  main.cc  main.cpp  node.cc  parser.y  parser.yy  scanner.l  scanner.ll  visitor.cc
src/AbstractSyntax/: AnonymousConstant.cpp  AnonymousConstant.h  Argument.cpp  Argument.h  ArrayExpression.cpp  ArrayExpression.h  ArrayType.h  AssignmentStatement.cpp  AssignmentStatement.h  BlockStatement.h  BooleanLiteralExpression.cpp  BooleanLiteralExpression.h  BooleanType.h  BottomType.cpp  BottomType.h  CallExpression.h  ClassDeclaration.cpp  ClassDeclaration.h  ClassItem.cpp  ClassItem.h  ClosureExpression.h  ConditionalStatement.h  ConstantDeclaration.cpp  ConstantDeclaration.h  ConstantItem.h  Declaration.cpp  Declaration.h  DeclarationStatement.cpp  DeclarationStatement.h  Expression.cpp  Expression.h  ExpressionStatement.h  ExternalPackageDeclaration.cpp  ExternalPackageDeclaration.h  ExternalPackageItem.h  FloatingPointLiteralExpression.h  FloatingPointType.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionPrototype.cpp  (+86 more)
src/ConcreteSyntax/: AnonymousConstant.h  Argument.h  ArrayExpression.h  AssignmentStatement.cpp  AssignmentStatement.h  BlockStatement.h  BooleanType.h  CallExpression.h  ClosureExpression.cpp  ConditionalStatement.cpp  ConstantItem.cpp  ConstantItem.h  ExpressionStatement.h  ExternalPackageItem.h  FloatingPointLiteralExpression.h  FloatingPointType.cpp  FunctionType.cpp  FunctionType.h  GroupedExpression.cpp  GroupedExpression.h  IdentifierPattern.cpp  IdentifierPattern.h  IndexExpression.cpp  InfixExpression.h  IntegerLiteralExpression.h  ItemStatement.h  Literal.cpp  Literal.h  LiteralPattern.cpp  ModuleItem.cpp  ModuleItem.h  Name.h  OperatorExpression.h  Parameter.cpp  PathExpression.cpp  PathExpression.h  PathPattern.h  PathType.h  PointerType.h  PostfixExpression.h  (+19 more)
src/NameResolution/: NameResolution.cpp  NameResolution.h
src/SymbolTable/: BlockScope.cpp  BlockScope.h  ClassSymbolTable.h  FunctionScope.cpp  FunctionScope.h  GlobalScope.cpp  GlobalScope.h  ModuleScope.cpp  ModuleScope.h  ModuleSymbol.cpp  ModuleSymbol.h  ModuleSymbolTable.cpp  ModuleSymbolTable.h  SubroutineSymbolTable.h  Symbol.h  SymbolTable.h
src/Visitor/: Visitor.h
src/generator/: Generator.h  generator.cpp
src/symbol/: SubroutineSymbolTable.h  SymbolTable.cpp  SymbolTable.h
src/symbolize/: Symbolize.cpp  Symbolize.h
src/syntax/: AnonymousConstant.cpp  AnonymousConstant.h  AnonymousConstant.hh  Argument.cpp  Argument.hh  ArrayExpression.cpp  ArrayExpression.h  ArrayExpression.hh  ArrayType.cpp  ArrayType.h  ArrayType.hh  AssignmentStatement.cpp  AssignmentStatement.h  AssignmentStatement.hh  BlockStatement.cpp  BlockStatement.h  BlockStatement.hh  BooleanLiteral.cpp  BooleanLiteral.h  BooleanLiteral.hh  BooleanLiteralExpression.h  BooleanType.cpp  BooleanType.h  BooleanType.hh  BottomType.cpp  BottomType.h  BottomType.hh  CallExpression.cpp  CallExpression.h  CallExpression.hh  ClassSymbol.cpp  ClassSymbol.h  ClassSymbolTable.cpp  ClassSymbolTable.h  ClosureExpression.cpp  ClosureExpression.h  ClosureExpression.hh  ConditionalStatement.cpp  ConditionalStatement.h  ConditionalStatement.hh  (+145 more)
test/: main.cpp
test/AbstractSyntax/: AnonymousConstant.cpp  Argument.cpp  ArrayExpression.cpp  ArrayType.cpp  AssignmentStatement.cpp  BlockStatement.cpp  BooleanLiteralExpression.cpp  BooleanType.cpp  BottomType.cpp  CallExpression.cpp  ClassDeclaration.cpp  ClosureExpression.cpp  ConditionalStatement.cpp  ConstantDeclaration.cpp  Declaration.cpp  DeclarationStatement.cpp  Expression.cpp  ExpressionStatement.cpp  FloatingPointLiteralExpression.cpp  FloatingPointType.cpp  FunctionDeclaration.cpp  FunctionPrototype.cpp  FunctionType.cpp  GroupedExpression.cpp  Identifier.cpp  IdentifierPattern.cpp  ImportDeclaration.cpp  IndexExpression.cpp  InfixExpression.cpp  InfixOperation.cpp  IntegerLiteralExpression.cpp  IntegerType.cpp  Literal.cpp  LiteralExpression.cpp  LiteralPattern.cpp  ModuleDeclaration.cpp  Name.cpp  Operator.cpp  OperatorExpression.cpp  Parameter.cpp  (+29 more)
